<resources>
    <string name="app_name">File Manager</string>
    <string name="phone_storage">Phone Storage</string>
    <string name="sd_card">SD Card</string>
    <string name="filename">Filename</string>
    <string name="filesize_files_in_folder">Filesize/Files in folder</string>
    <string name="share_with">Share with…</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="type_the_name_here">Type the name here</string>
    <string name="no_items_selected">No items selected</string>
    <string name="to_select_items">To select items click on their icons.</string>
    <string name="ok">OK</string>
    <string name="already_exist">Already exists!</string>
    <string name="empty_name">Empty name</string>
    <string name="enter_name">Please enter a name!</string>
    <string name="attention">Attention</string>
    <string name="info">Info</string>
    <string name="no_results">No results.</string>
    <string name="rationale">The application needs to access your files to display them.</string>
    <string name="proceed">Proceed</string>
    <string name="exit">Exit</string>
    <string name="no_sdcard">No SD Card detected</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_folder">Create new folder</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="delete_item">"Delete item: "</string>
    <string name="your_notes">Your notes</string>
    <string name="create_new_textfile">Create new textfile</string>
    <string name="name">Name:</string>
    <string name="notes">Notes:</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="cannot_copy_into_itself">You cannot copy the folder into itself!</string>
    <string name="cannot_move_into_itself">You cannot move the folder into itself!</string>
    <string name="open_with">Open with…</string>
    <string name="copy_to">Copy to…</string>
    <string name="move_to">Move to…</string>
    <string name="sdcard_permission">In the next dialog you need to choose your SD card to grant write permission!</string>
    <string name="welcome">Welcome!</string>
    <string name="thanks">Thanks for using my app!</string>
    <string name="copying">Copying…</string>
    <string name="deleting">Deleting…</string>
    <string name="moving">Moving…</string>
    <string name="searching">Searching…</string>
    <string name="wait">Please wait…</string>
    <string name="github">Github: git.io/JJkLg</string>
    <string name="email">Email: pungorandras@gmail.com</string>
    <string name="create_new_txt_msg">You can create a new text file at the current location.</string>
    <string name="create_new_folder_msg">You can create a new folder at the current location.</string>
    <string name="select_all_items">Select all items</string>
    <string name="select_all_items_msg">You can select all items at the current location.</string>
    <string name="delete_selected_items_msg">You can delete the selected items.</string>
    <string name="copy_selected_items">Copy selected items</string>
    <string name="copy_selected_items_msg">After pressing this button, you should navigate to the target location. At the target location you should press the tick button to start the copy process.</string>
    <string name="move_selected_items">Move selected items</string>
    <string name="move_selected_items_msg">After pressing this button, you should navigate to the target location. At the target location you should press the tick button to start the move process.</string>
    <string name="search_recursively">Search recursively</string>
    <string name="search_recursively_msg">You can search for items. It searches at the current location and in the subfolders recursively.</string>
    <string name="switch_source">Switch source</string>
    <string name="switch_source_msg">You can switch between internal storage and SD card, if an SD card is inserted.</string>
    <string name="version">"Version: "</string>
    <string name="multi_thread_op_not_impl">Multi-threaded operations are not supported yet.</string>
</resources>
