<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:title="@string/share_with"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_to"
        android:icon="@drawable/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/move"
        android:title="@string/move_to"
        android:icon="@drawable/move"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        android:icon="@drawable/rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />
</menu>