<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".FileManagerActivity">

    <LinearLayout
        android:id="@+id/switch_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Internal"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_button_height"
            android:layout_weight="1"
            android:backgroundTint="@color/button_pressed"
            android:drawableStart="@drawable/phone_storage"
            android:text="@string/phone_storage"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/SDCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_button_height"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:drawableStart="@drawable/sdcard"
            android:text="@string/sd_card"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFiles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarSize="6dp"
        android:scrollbarThumbVertical="@color/scrollbar"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_source" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_button_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/create_textfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/create_textfile" />

        <ImageButton
            android:id="@+id/create_folder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/create_folder" />

        <ImageButton
            android:id="@+id/select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/select_all" />

        <ImageButton
            android:id="@+id/delete_selected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/delete" />

        <ImageButton
            android:id="@+id/copy_selected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/copy" />

        <ImageButton
            android:id="@+id/move_selected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/move" />

        <ImageButton
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:src="@drawable/search" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/progress_layout_height"
        android:background="@color/progressbar_layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/rvFiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/button"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <ir.nardana.linearprogressbar.LinearProgressBar
            android:id="@+id/LinearProgressBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="12dp"
            android:layout_toStartOf="@+id/button"
            app:ProgressBackground="@color/background"
            app:ProgressToBackground="@color/progressbar"
            app:RadiusAll="20"
            app:TitleProgress="@string/copying"
            app:TitleSize="12dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>